--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,9 +6,17 @@
   <title>BOOK APP</title>
 </head>
 <body>
-  <h1>Book App</h1>
+  <form action="pages/searches/new.ejs">
+    <fieldset>
+      <legend>Book?</legend>
+      <input type="text">
+      <input type="text">
+    </fieldset>
+  </form>
+ 
+  <!-- <h1>Book App</h1>
   <p><%= book %></p>
-  <p><%= reading %></p>
+  <p><%= reading %></p> -->
   
 </body>
 </html>
